// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterfactualUnsupported status renders inputs and outputs status 1`] = `
<EmptyState
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h1"
  >
    Unsupported model
  </Title>
  <EmptyStateBody>
    <p>
      The model contains elements that are unsupported.
    </p>
    <p
      data-ouia-component-id="message-inputs-outcomes"
    >
      All of the model inputs and outcomes are structured data-types.
    </p>
    <p>
      Consequentially Counterfactuals cannot be generated.
    </p>
  </EmptyStateBody>
</EmptyState>
`;

exports[`CounterfactualUnsupported status renders inputs status 1`] = `
<EmptyState
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h1"
  >
    Unsupported model
  </Title>
  <EmptyStateBody>
    <p>
      The model contains elements that are unsupported.
    </p>
    <p
      data-ouia-component-id="message-inputs"
    >
      All of the model inputs are structured data-types.
    </p>
    <p>
      Consequentially Counterfactuals cannot be generated.
    </p>
  </EmptyStateBody>
</EmptyState>
`;

exports[`CounterfactualUnsupported status renders outputs status 1`] = `
<EmptyState
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h1"
  >
    Unsupported model
  </Title>
  <EmptyStateBody>
    <p>
      The model contains elements that are unsupported.
    </p>
    <p
      data-ouia-component-id="message-outcomes"
    >
      All of the model outcomes are structured data-types.
    </p>
    <p>
      Consequentially Counterfactuals cannot be generated.
    </p>
  </EmptyStateBody>
</EmptyState>
`;
